[project]
name = "yatry"
version = "0.1.0"
description = "No hassle - Ride and hustle"
readme = "README.md"
authors = [
    { name = "Sattwik Sahu", email = "sattwik21@iiserb.ac.in" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
yatry = "yatry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
