[project]
name = "yatry"
version = "0.1.0"
description = "No hassle - Ride and hustle"
readme = "README.md"
authors = [
    { name = "Sattwik Sahu", email = "sattwik21@iiserb.ac.in" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[project.scripts]
yatry = "yatry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "ruff>=0.11.4",
]
