[project]
name = "yatry"
version = "0.1.0"
description = "No hassle - Ride and hustle"
readme = "README.md"
authors = [
    { name = "Sattwik Sahu", email = "sattwik21@iiserb.ac.in" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pulp>=3.1.1",
    "python-louvain>=0.16",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "uuid>=1.30",
]

[project.scripts]
yatry = "yatry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "ruff>=0.11.4",
]
